--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
+    "nanoid": "^4.0.0",
     "prettier": "^2.7.1",
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
