--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.3.4",
     "formik": "^2.2.9",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
