--- a/package.json
+++ b/package.json
@@ -20,11 +20,15 @@
     "prop-types": "^15.8.1",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.8",
+    "styled-system": "^5.1.5",
     "web-vitals": "^2.1.3",
     "yup": "^0.32.11"
   },
