--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "https://yurii-kavuza.github.io/goit-react-hw-08-phonebook/",
   "dependencies": {
+    "@chakra-ui/react": "^2.5.1",
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
     "@redux-devtools/extension": "^3.2.5",
@@ -13,6 +14,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.3.4",
     "formik": "^2.2.9",
+    "framer-motion": "^10.2.4",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.3",
     "nanoid": "^4.0.0",
